Fixed footer z-index

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,7 +160,8 @@ html, body {
   font-size: 15px;
 }
 
-.footer{
+.footer {
+  z-index: 9999;
   position: fixed;
   right: 0;
   bottom: 0;
@@ -182,6 +183,7 @@ h1 {
   font-size: 1.0rem;
   color: blue;
 }
+
 .p2 {
   font-size: 0.9rem;
   color: gray;
@@ -191,11 +193,13 @@ h1 {
   width:100%;
   max-height: 400px !important;
 }
-.imageTwo{
+
+.imageTwo {
   width:100%;
   max-height: 400px !important;
 }
-.imageThree{
+
+.imageThree {
   width:100%;
   max-height: 400px !important;
 }
